The side bar came to me in a dream, or something. High contrast for all the people who don't want stupid light grey on slightly darker gray bullshit that's all too common now (seriously fucking stop)

--- a/Nulah-Core/wwwroot/SASS/Partials/_layout.scss
+++ b/Nulah-Core/wwwroot/SASS/Partials/_layout.scss
@@ -8,15 +8,15 @@
 
 body {
     background-color: $site-background;
+    height: 100%;
     //background-color: hsl(256, 100%, 5%);
     //background: linear-gradient( to top, hsl(256, 100%, 5%), hsl(256, 100%, 15%) );
 }
 
 .page-container {
     display: flex;
-    width: 1200px;
-    margin: 0 auto;
-    padding: 15px 0;
+    width: 100%;
+    height: 100%;
     //justify-content: space-between;
 }
 
